<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bind_bg"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/localefile_picture"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_up"
                android:onClick="onClick" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_image" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/photo" />

                <TextView
                    android:id="@+id/localefile_pic_cnt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:textColor="@color/darkGray"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bxfile_arrow_right_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/localefile_music"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_middle"
                android:onClick="onClick" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_music" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/audio" />
                
                <TextView
                    android:id="@+id/localefile_music_cnt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:textColor="@color/darkGray"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bxfile_arrow_right_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/localefile_video"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_down"
                android:onClick="onClick" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_video" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/video" />
                
                 <TextView
                    android:id="@+id/localefile_video_cnt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:textColor="@color/darkGray"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bxfile_arrow_right_normal" />
            </LinearLayout>

            
			
            <LinearLayout
                android:id="@+id/recPanel"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_down"
                android:onClick="onClick" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mic" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/ktv" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bxfile_arrow_right_normal" />
            </LinearLayout>
             
            <LinearLayout
                android:id="@+id/ctrlPanel"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_down"
                android:onClick="onClick" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_control" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/control" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bxfile_arrow_right_normal" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/network"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_down"
                android:onClick="onClick" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_acc" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/network" />

               	<com.dream.share.util.SwitchView
               	    android:id="@+id/wifip2p_switch"
               	    android:layout_width="60dip"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_weight="0.8"
     android:padding="10dp" >
    <LinearLayout
		style="@style/localeFileMainItemStyle"
        android:background="@drawable/selector_tab_down" >
		    <TextView   
		        android:id="@+id/search_devices" 
		        android:layout_weight="1" 
		        android:text="@string/device_scan"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:textSize="24dp" />  
		    <ImageView
		        android:id="@+id/btn_search"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/search_btn"  />
	</LinearLayout>
    <ListView android:id="@+id/devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />
</LinearLayout>

<!-- 
<LinearLayout
    android:id="@+id/adcontainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:orientation="vertical" >

	<com.google.android.gms.ads.AdView
       android:id="@+id/adView"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       ads:adSize="SMART_BANNER"
       ads:adUnitId="@string/banner_ad_unit_id">
  	</com.google.android.gms.ads.AdView>
</LinearLayout>
 -->
</LinearLayout>