<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bind_bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >


            <LinearLayout
                android:id="@+id/localefile_ram"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_middle"
                android:onClick="onClick" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mem" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/bxfile_ram" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bxfile_arrow_right_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/localefile_sdcard"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_down"
                android:onClick="onClick" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sdcard" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/bxfile_sdcard" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bxfile_arrow_right_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/localefile_sdcard2"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_middle"
                android:onClick="onClick"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sdcard" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/bxfile_sdcard" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bxfile_arrow_right_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/localefile_extSdcard"
                style="@style/localeFileMainItemStyle"
                android:background="@drawable/selector_tab_down"
                android:onClick="onClick"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sdcard" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/bxfile_extsdcard" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bxfile_arrow_right_normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>